--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400&family=Montserrat:ital,wght@0,200;0,300;0,400;0,700;0,800;1,200&family=Open+Sans:wght@300;400;500&family=Poppins:wght@100;200;300;400&family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <title>Dave</title>
   </head>
   <body>
     <div id="root"></div>
